# meta-learn

./: .coverage  .gitignore  MANIFEST.in  README.md  coverage.xml  environment.yml  pyproject.toml
.github/workflows/: test.yml
docs/: ENVIRONMENT.md  FeatureMatrix.md  REPORT.md  SPEC.md  implementation_plan.md  quickstart.py  task.md
domainml/: __init__.py  manifold.py
domainml/analysis/: __init__.py  causal.py  coef_checker.py  conflict_detector.py  diagnostics.py  metrics.py  parallel.py
domainml/constraints/: __init__.py  engine.py  group.py  kernel.py  knn_graph.py  manifold.py  manifold_engine.py  manifold_kernel.py  manifold_regularizer.py  monotonicity.py
domainml/core/: __init__.py  cache.py  logger.py  metadata.py  pipeline.py
domainml/meta/: manifold_est.py
domainml/model_selection/: cv.py
domainml/models/: __init__.py  base.py  uncertainty.py  wrappers.py
tests/unit/: test_analysis.py  test_base.py  test_conflict_detector.py  test_engine.py  test_group.py  test_integration.py  test_kernel.py  test_knn_graph.py  test_manifold.py  test_manifold_engine.py  test_manifold_kernel.py  test_manifold_regularizer.py  test_metadata.py  test_monotonicity.py  test_optimizers.py  test_pipeline.py  test_wrapper.py  test_wrapper_advanced.py
