[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domainml-meta"
version = "0.1.0"
authors = [
  { name="System", email="admin@example.com" }
]
description = "Domain knowledge integrated machine learning library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "scikit-learn",
    "numpy",
    "pandas",
    "scipy",
    "cvxpy"
]

[tool.hatch.build.targets.wheel]
packages = ["domainml"]
