[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domainml-meta"
version = "0.3.0"
authors = [
  { name="System", email="admin@example.com" }
]
description = "Domain knowledge integrated machine learning library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "scikit-learn",
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
convex = ["cvxpy>=1.3"]
all = ["cvxpy>=1.3"]

[tool.hatch.build.targets.wheel]
packages = ["domainml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_incomplete_defs = true
check_untyped_defs = true
